fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ footer {
 	font-size: 12px;
 	padding: 0;
 	max-height: 100%;
+	overflow-x: hidden;
 }
 
 .banner {
